Bug #2194 - Accessibility: 2012 theme contrast error - hidden white text?
Making custom rule higher priority

--- a/wp-content/mu-plugins/theme-fixes/twentytwelve.css
+++ b/wp-content/mu-plugins/theme-fixes/twentytwelve.css
@@ -1,3 +1,3 @@
-.required {
+body .required {
     color: #C10000;
 }
